Create a file about me

--- a/index.html
+++ b/index.html
@@ -14,8 +14,27 @@
     <main>
         <p class="wisdom">"I've transferred my life and can do the same for you"</p>
         <p>The name is <b>Saleh Abu Radwan</b>, I'm a software developer from amman - jordan.</p>
-        <p>I studed a computer sceince from alzaytonah university.</p>
-        <p>I like coding, and I always learning and challenging myself! </p>
+        <ul>
+            <li>I studed a computer sceince from alzaytonah university.</li>
+            <li>I have worked in the sales and data entry field.</li>
+            <li>I like coding, and I always learning and challenging myself!</li>
+        </ul>
+        <!-- <p></p>
+        <p></p>
+        <p> </p> -->
+
+        <ol>
+            <li>Barca</li>
+            <li>Man city</li>
+            <li>Ac milan</li>
+            <li>Man united</li>
+            <li>Madrid</li>
+            <li>Levarpool</li>
+            <li>Roma</li>
+            <li>Totenham</li>
+            <li>Al-wehdat</li>
+            <li>Al-faisaly</li>
+        </ol>
     </main>
     <footer>
         &copy; All right reserved
