I added some css code to the webpage

--- a/index.html
+++ b/index.html
@@ -10,20 +10,37 @@
 <body>
     <header>
         <img class="aboutMe" src="https://1.bp.blogspot.com/-Jrkj5rAUwOA/Wzvmq6Y0GRI/AAAAAAAABIg/9MK8iri3o3oWPHL9CK0zIr74vLLz5vBmgCEwYBhgL/s1600/download.png" alt="About Me">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Portfolio</li>
+                <li>contact</li>
+            </ul>
+        </nav>
     </header>
     <main>
         <p class="wisdom">"I've transferred my life and can do the same for you"</p>
-        <p>The name is <b>Saleh Abu Radwan</b>, I'm a software developer from amman - jordan.</p>
-        <ul>
-            <li>I studed a computer sceince from alzaytonah university.</li>
-            <li>I have worked in the sales and data entry field.</li>
-            <li>I like coding, and I always learning and challenging myself!</li>
-        </ul>
-        <!-- <p></p>
-        <p></p>
-        <p> </p> -->
+        <p>The name is <b>Saleh Abu Radwan</b>, 
+            I'm a software developer from amman - jordan.
+            I like coding, and I always learning and challenging myself!</p>
+        
 
-        <ol>
+        <p>Education</p>
+        <ul class="edu">
+            <li>present I'm taking an intensive Software Development course 
+                at LTUC-Abdul Aziz Al Ghurair School of Advanced Computing</li>
+            <li>studded a computer science from al zaytoonah university</li>   
+        </ul>
+        <p>Experince</p>
+        <ol class="exp">
+            <li>Trainee in the Exceed IT Service</li>
+            <li>I worked sales in Matalan.</li>
+            <li>I worked data entry in Jordan Balance. </li>
+
+        </ol>
+
+        <p>Favorite Team</p>
+        <ol class="top-ten">
             <li>Barca</li>
             <li>Man city</li>
             <li>Ac milan</li>
@@ -37,16 +54,17 @@
         </ol>
     </main>
     <footer>
-        &copy; All right reserved
         <nav>
+            
             <ul>
+                 &copy; All right reserved
                 <li><i class="fab fa-facebook-f"></i></li>
                 <li><i class="fab fa-twitter"></i></li>
                 <li><i class="fab fa-snapchat-ghost"></i></li>
             </ul>
         </nav>
     </footer>
-    <script src="./js/app.js"></script>
+    <!-- <script src="./js/app.js"></script> -->
     <script src="https://kit.fontawesome.com/9e5d1913ca.js" crossorigin="anonymous"></script>
 </body>
 </html>
